# GranSim

./: .gitignore  CMakeLists.txt  README.md  functions.cc  functions.h  index.html  interactions.cc  interactions.h  main.cc  makefile  molecule.cc  molecule.h  parallel.cc  parallel.h  params.json  schedule.cc  schedule.h  setup.py  system.cc  system.h  test.cc  vec.cc  vec.h
examples/: hopper_2d.py  hopper_3d.py  surface_fall_2d.py  surface_fall_3d.py  two_walls.py
gransim/: __init__.py  structures_2d.py  structures_3d.py
gransim/vis/: __init__.py  matplotlib_2d.py
src/: geometry_2d.cpp  geometry_2d.hpp  geometry_3d.cpp  geometry_3d.hpp  gran.cpp  gran.hpp  gran2d.cpp  gran2d.hpp  gran2d_pyb.cpp  gran3d.cpp  gran3d.hpp  gran3d_pyb.cpp  gran_pyb.cpp  main_pyb.cpp  vec.hpp
